tests/snapshots/serde__display_int16array_resizable_non_tracking.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint16Array(new ArrayBuffer(4, { maxByteLength: 10 })).subarray(0, 1)"
---
const v0 = new ArrayBuffer(4, { maxByteLength: 10 });
new Uint16Array(v0, 0, 1)
