tests/snapshots/serde__display_int16array_resizable_with_data.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = new Int16Array(new ArrayBuffer(4, { maxByteLength: 10 })); a.set([1, -2]); a"
---
const v0 = new ArrayBuffer(4, { maxByteLength: 10 });
new Uint8Array(v0).set([
  0x01, 0x00, 0xfe, 0xff,
]);
new Int16Array(v0)
