tests/snapshots/serde__display_int16array_subarray.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int16Array([1, 2]).subarray(1, 2)"
---
new Int16Array([
  0x01, 0x02,
]).subarray(1, 2)
