tests/snapshots/serde__display_int16array_zeroed2.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int16Array([0, 0, 0])"
---
new Int16Array(3)
