tests/snapshots/serde__display_int32array_one_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int32Array([-1])"
---
new Int32Array([
  -0x01,
])
