tests/snapshots/serde__display_int32array_resizable.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int32Array(new ArrayBuffer(4, { maxByteLength: 12 }))"
---
const v0 = new ArrayBuffer(4, { maxByteLength: 12 });
new Int32Array(v0)
