tests/snapshots/serde__display_int32array_two_bytes.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int32Array([1, -2])"
---
new Int32Array([
  0x01, -0x02,
])
