tests/snapshots/serde__display_int32array_zeroed2.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int32Array([0, 0, 0])"
---
new Int32Array(3)
